API_Reference/milvus-sdk-java/v3.0.x/v2/Collections/ListCollectionsV2.md
# ListCollectionsV2()

This operation lists all existing collections in a specified database.

```java
public ListCollectionsResp listCollectionsV2(ListCollectionsReq request)
```

## Request Syntax

```java
listCollectionsV2(ListCollectionsReq.builder()
    .databaseName(String databaseName)
    .build()
)
```

**BUILDER METHODS:**

- `databaseName(String databaseName)`

    The name of the target database. Once specified, this operation returns all collections in the specified database.

**RETURN TYPE:**

*ListCollectionsResp*

**RETURNS:**

A **ListCollectionsResp** object containing a list of collection names. If there is not any collection, an empty list will be returned.

**PARAMETERS:**

- **collectionNames** (*List<String>*)

    A list of strings containing the names of all existing collections.

- **collectionInfos** (*List<CollectionInfo>*)

    A list of **CollectionInfo** objects. A **CollectionInfo** object has the following fields:

    - **collectionName** (*String*)

        The name of a collection.

    - **shardNum** (*Integer*)

        The number of shards in the above collection.

**EXCEPTIONS:**

- **MilvusClientExceptions**

    This exception will be raised when any error occurs during this operation.

## Example

```java
import io.milvus.v2.client.ConnectConfig;
import io.milvus.v2.client.MilvusClientV2;
import io.milvus.v2.service.collection.request.ListCollectionsReq;
import io.milvus.v2.service.collection.response.ListCollectionsResp;
import java.util.List;
import java.util.Set;

// 1. Set up a client
ConnectConfig connectConfig = ConnectConfig.builder()
        .uri("http://localhost:19530")
        .token("root:Milvus")
        .build();
        
MilvusClientV2 client = new MilvusClientV2(connectConfig);

// 2. List collections
ListCollectionsReq listCollectionReq = ListCollectionsReq.builder()
    .databaseName("my_database")
    .build();

ListCollectionsResp listAliasResp = client.listCollectionsV2(listCollectionReq);
```

